remove redundant final modifiers, unused imports. preseve stack traces and other such suggestions made by findbugs/sonar