@@ -7,6 +7,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Locale;
 
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
@@ -34,12 +35,12 @@ public class DirectoryWatchingQueuer extends DirectoryWatcher implements
 	}
 
 	@Override
-	public final void newFileCheck(String filePath, String fileName) {
+	public void newFileCheck(String filePath, String fileName) {
 		File file = new File(filePath);
 		
 		logger.debug(String.format("A file %s has arrived with path %s", fileName, filePath));
 		
-		if (fileName.toLowerCase().endsWith(".xml")) {
+		if (fileName.toLowerCase(Locale.ENGLISH).endsWith(".xml")) {
 			logger.info("An xml file has arrived");
 			this.filePathsPendingValidation.add(file.getAbsolutePath());
 		}
@@ -55,14 +56,13 @@ public class DirectoryWatchingQueuer extends DirectoryWatcher implements
 			this.start(path);
 		} catch (IOException e) {
 			logger.fatal("Failed to register watch service", e);
-			System.exit(1);
 		}
 	}
 
 	/**
 	 * On startup check for any existing messages that may have arrived when the serivce was not running
 	 */
-	protected final void queueExistingFiles() {
+	protected void queueExistingFiles() {
 		
 		logger.info("Checking for existing files in " + path);
 		
@@ -78,30 +78,34 @@ public class DirectoryWatchingQueuer extends DirectoryWatcher implements
 		}
 	}
 
-	private final List<File> sortFilesByDate(Collection<File> existingFiles) {
-		List<File> existingFilesList  = new ArrayList<File>(existingFiles);		
-		Collections.sort(existingFilesList, new Comparator<File>(){
+	private static Comparator<File> lastModifiedComparator =  new Comparator<File>(){
 
-			@Override
-			public int compare(File o1, File o2) {
-				return new Long(o1.lastModified()).compareTo(new Long(o2.lastModified()));
-			}});
+		@Override
+		public int compare(File o1, File o2) {
+			return Long.valueOf(o1.lastModified()).compareTo(Long.valueOf(o2.lastModified()));
+		}};
+	
+	private List<File> sortFilesByDate(Collection<File> existingFiles) {
+		List<File> existingFilesList  = new ArrayList<File>(existingFiles);		
+		Collections.sort(existingFilesList,lastModifiedComparator);
 		return existingFilesList;
 	}
 
-	private final Collection<File> listFiles() {
-		Collection<File> existingFiles = FileUtils.listFiles(new File(path), new IOFileFilter() {
-			
-			@Override
-			public boolean accept(File dir, String name) {
-				return FilenameUtils.getExtension(name).toLowerCase().equals("xml");
-			}
-			
-			@Override
-			public boolean accept(File file) {
-				return FilenameUtils.getExtension(file.getName()).toLowerCase().equals("xml");
-			}
-		}, TrueFileFilter.INSTANCE);
+	private static IOFileFilter acceptXMLFilesFilter = new IOFileFilter() {
+		
+		@Override
+		public boolean accept(File dir, String name) {
+			return FilenameUtils.getExtension(name).toLowerCase(Locale.ENGLISH).equals("xml");
+		}
+		
+		@Override
+		public boolean accept(File file) {
+			return FilenameUtils.getExtension(file.getName()).toLowerCase(Locale.ENGLISH).equals("xml");
+		}
+	};
+	
+	private Collection<File> listFiles() {
+		Collection<File> existingFiles = FileUtils.listFiles(new File(path), acceptXMLFilesFilter, TrueFileFilter.INSTANCE);
 		return existingFiles;
 	}
 
